# food-delivery-route-optimization

./: COMPLETION_REPORT.md  ERROR_FIX_REPORT.md  FIX_SUMMARY.md  INDEX.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  START_HERE.txt  USAGE.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.ps1  run_tests.py  test_optimization.py  verify.py  visualize_map.py
src/: app.py  config.py
src/graph/: multistage.py  utils.py
src/models/: order.py
src/routes/: api.py
src/services/: optimizer.py
src/static/css/: main.css
src/static/js/: main.js
src/templates/: index.html  map_optimizer.html  network_map.html
tests/: test_graph.py  test_optimizer.py
