[tool.poetry]
name = "food-delivery-route-optimization"
version = "0.1.0"
description = "A project for optimizing food delivery routes using multistage graphs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
networkx = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"